# ModeloML-predsales

./: .gitignore  Docker: capturas de pantalla.md  README.md  main.py  pyproject.toml  train
notebook/: Tarea1_FINAL.ipynb  processing_job.ipynb  sagemaker_byoc.ipynb  sagemaker_pipeline_byoc.ipynb
src/: inference.py  prep.py  prep_inference.py  train.py
src/evaluation/: evaluate.py
src/inference/: Dockerfile  __main__.py  inference.py
src/inference/test/: test_inference.py
src/inference/utils/: data_validation.py  metrics.py
src/preprocessing/: Dockerfile  __main__.py  prep.py  prep_inference.py  preprocess.py
src/preprocessing/test/: test_prep.py
src/training/: Dockerfile  __main__.py  predictor.py  requirements.txt  serve  train  train.py
src/training/test/: test_train.py
src/utils/: logger.py
